y.output
Grammar

    0 $accept: PROGRAMME $end

    1 PROGRAMME: tVOID tMAIN tOPEN_PAR ARG_LIST tCLOSE_PAR tOPEN_BRACE BODY tCLOSE_BRACE

    2 ARG_LIST: %empty
    3         | tINT tVAR_NAME tCOMA ARG_LIST

    4 BODY: DECLARATION_BLOCK INSTRUCTION_BLOCK

    5 DECLARATION_BLOCK: %empty
    6                  | DECLARATION_LINE DECLARATION_BLOCK

    7 DECLARATION_LINE: VAR_DECLARATION_LINE
    8                 | CONST_DECLARATION_LINE

    9 VAR_DECLARATION_LINE: tINT VAR_DECLARATION_LIST tEND

   10 CONST_DECLARATION_LINE: tCONST CONST_DECLARATION_LIST tEND

   11 VAR_DECLARATION_LIST: VAR_DECLARATION
   12                     | VAR_DECLARATION tCOMA VAR_DECLARATION_LIST

   13 CONST_DECLARATION_LIST: CONST_DECLARATION
   14                       | CONST_DECLARATION tCOMA CONST_DECLARATION_LIST

   15 VAR_DECLARATION: tVAR_NAME
   16                | tVAR_NAME tAFFECT tINT_VAL

   17 CONST_DECLARATION: tVAR_NAME tAFFECT tINT_VAL

   18 INSTRUCTION_BLOCK: %empty
   19                  | INSTRUCTION_LINE INSTRUCTION_BLOCK

   20 INSTRUCTION_LINE: AFFECT tEND
   21                 | PRINT tEND
   22                 | RETURN tEND

   23 AFFECT: tVAR_NAME tAFFECT EXPRESSION

   24 PRINT: tPRINTF tOPEN_PAR EXPRESSION tCLOSE_PAR

   25 RETURN: tRETURN EXPRESSION

   26 EXPRESSION: tINT_VAL
   27           | tVAR_NAME
   28           | tOPEN_PAR EXPRESSION tMUL EXPRESSION tCLOSE_PAR
   29           | tOPEN_PAR EXPRESSION tSLASH EXPRESSION tCLOSE_PAR
   30           | tOPEN_PAR EXPRESSION tPLUS EXPRESSION tCLOSE_PAR
   31           | tOPEN_PAR EXPRESSION tMINUS EXPRESSION tCLOSE_PAR


Terminals, with rules where they appear

$end (0) 0
error (256)
tMAIN (258) 1
tPRINTF (259) 24
tINT (260) 3 9
tVOID (261) 1
tRETURN (262) 25
tCONST (263) 10
tVAR_NAME (264) 3 15 16 17 23 27
tINT_VAL (265) 16 17 26
tOPEN_BRACE (266) 1
tCLOSE_BRACE (267) 1
tPLUS (268) 30
tMINUS (269) 31
tMUL (270) 28
tSLASH (271) 29
tAFFECT (272) 16 17 23
tOPEN_PAR (273) 1 24 28 29 30 31
tCLOSE_PAR (274) 1 24 28 29 30 31
tCOMA (275) 3 12 14
tEND (276) 9 10 20 21 22


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
PROGRAMME (23)
    on left: 1, on right: 0
ARG_LIST (24)
    on left: 2 3, on right: 1 3
BODY (25)
    on left: 4, on right: 1
DECLARATION_BLOCK (26)
    on left: 5 6, on right: 4 6
DECLARATION_LINE (27)
    on left: 7 8, on right: 6
VAR_DECLARATION_LINE (28)
    on left: 9, on right: 7
CONST_DECLARATION_LINE (29)
    on left: 10, on right: 8
VAR_DECLARATION_LIST (30)
    on left: 11 12, on right: 9 12
CONST_DECLARATION_LIST (31)
    on left: 13 14, on right: 10 14
VAR_DECLARATION (32)
    on left: 15 16, on right: 11 12
CONST_DECLARATION (33)
    on left: 17, on right: 13 14
INSTRUCTION_BLOCK (34)
    on left: 18 19, on right: 4 19
INSTRUCTION_LINE (35)
    on left: 20 21 22, on right: 19
AFFECT (36)
    on left: 23, on right: 20
PRINT (37)
    on left: 24, on right: 21
RETURN (38)
    on left: 25, on right: 22
EXPRESSION (39)
    on left: 26 27 28 29 30 31, on right: 23 24 25 28 29 30 31


State 0

    0 $accept: . PROGRAMME $end

    tVOID  shift, and go to state 1

    PROGRAMME  go to state 2


State 1

    1 PROGRAMME: tVOID . tMAIN tOPEN_PAR ARG_LIST tCLOSE_PAR tOPEN_BRACE BODY tCLOSE_BRACE

    tMAIN  shift, and go to state 3


State 2

    0 $accept: PROGRAMME . $end

    $end  shift, and go to state 4


State 3

    1 PROGRAMME: tVOID tMAIN . tOPEN_PAR ARG_LIST tCLOSE_PAR tOPEN_BRACE BODY tCLOSE_BRACE

    tOPEN_PAR  shift, and go to state 5


State 4

    0 $accept: PROGRAMME $end .

    $default  accept


State 5

    1 PROGRAMME: tVOID tMAIN tOPEN_PAR . ARG_LIST tCLOSE_PAR tOPEN_BRACE BODY tCLOSE_BRACE

    tINT  shift, and go to state 6

    $default  reduce using rule 2 (ARG_LIST)

    ARG_LIST  go to state 7


State 6

    3 ARG_LIST: tINT . tVAR_NAME tCOMA ARG_LIST

    tVAR_NAME  shift, and go to state 8


State 7

    1 PROGRAMME: tVOID tMAIN tOPEN_PAR ARG_LIST . tCLOSE_PAR tOPEN_BRACE BODY tCLOSE_BRACE

    tCLOSE_PAR  shift, and go to state 9


State 8

    3 ARG_LIST: tINT tVAR_NAME . tCOMA ARG_LIST

    tCOMA  shift, and go to state 10


State 9

    1 PROGRAMME: tVOID tMAIN tOPEN_PAR ARG_LIST tCLOSE_PAR . tOPEN_BRACE BODY tCLOSE_BRACE

    tOPEN_BRACE  shift, and go to state 11


State 10

    3 ARG_LIST: tINT tVAR_NAME tCOMA . ARG_LIST

    tINT  shift, and go to state 6

    $default  reduce using rule 2 (ARG_LIST)

    ARG_LIST  go to state 12


State 11

    1 PROGRAMME: tVOID tMAIN tOPEN_PAR ARG_LIST tCLOSE_PAR tOPEN_BRACE . BODY tCLOSE_BRACE

    tINT    shift, and go to state 13
    tCONST  shift, and go to state 14

    $default  reduce using rule 5 (DECLARATION_BLOCK)

    BODY                    go to state 15
    DECLARATION_BLOCK       go to state 16
    DECLARATION_LINE        go to state 17
    VAR_DECLARATION_LINE    go to state 18
    CONST_DECLARATION_LINE  go to state 19


State 12

    3 ARG_LIST: tINT tVAR_NAME tCOMA ARG_LIST .

    $default  reduce using rule 3 (ARG_LIST)


State 13

    9 VAR_DECLARATION_LINE: tINT . VAR_DECLARATION_LIST tEND

    tVAR_NAME  shift, and go to state 20

    VAR_DECLARATION_LIST  go to state 21
    VAR_DECLARATION       go to state 22


State 14

   10 CONST_DECLARATION_LINE: tCONST . CONST_DECLARATION_LIST tEND

    tVAR_NAME  shift, and go to state 23

    CONST_DECLARATION_LIST  go to state 24
    CONST_DECLARATION       go to state 25


State 15

    1 PROGRAMME: tVOID tMAIN tOPEN_PAR ARG_LIST tCLOSE_PAR tOPEN_BRACE BODY . tCLOSE_BRACE

    tCLOSE_BRACE  shift, and go to state 26


State 16

    4 BODY: DECLARATION_BLOCK . INSTRUCTION_BLOCK

    tPRINTF    shift, and go to state 27
    tRETURN    shift, and go to state 28
    tVAR_NAME  shift, and go to state 29

    $default  reduce using rule 18 (INSTRUCTION_BLOCK)

    INSTRUCTION_BLOCK  go to state 30
    INSTRUCTION_LINE   go to state 31
    AFFECT             go to state 32
    PRINT              go to state 33
    RETURN             go to state 34


State 17

    6 DECLARATION_BLOCK: DECLARATION_LINE . DECLARATION_BLOCK

    tINT    shift, and go to state 13
    tCONST  shift, and go to state 14

    $default  reduce using rule 5 (DECLARATION_BLOCK)

    DECLARATION_BLOCK       go to state 35
    DECLARATION_LINE        go to state 17
    VAR_DECLARATION_LINE    go to state 18
    CONST_DECLARATION_LINE  go to state 19


State 18

    7 DECLARATION_LINE: VAR_DECLARATION_LINE .

    $default  reduce using rule 7 (DECLARATION_LINE)


State 19

    8 DECLARATION_LINE: CONST_DECLARATION_LINE .

    $default  reduce using rule 8 (DECLARATION_LINE)


State 20

   15 VAR_DECLARATION: tVAR_NAME .
   16                | tVAR_NAME . tAFFECT tINT_VAL

    tAFFECT  shift, and go to state 36

    $default  reduce using rule 15 (VAR_DECLARATION)


State 21

    9 VAR_DECLARATION_LINE: tINT VAR_DECLARATION_LIST . tEND

    tEND  shift, and go to state 37


State 22

   11 VAR_DECLARATION_LIST: VAR_DECLARATION .
   12                     | VAR_DECLARATION . tCOMA VAR_DECLARATION_LIST

    tCOMA  shift, and go to state 38

    $default  reduce using rule 11 (VAR_DECLARATION_LIST)


State 23

   17 CONST_DECLARATION: tVAR_NAME . tAFFECT tINT_VAL

    tAFFECT  shift, and go to state 39


State 24

   10 CONST_DECLARATION_LINE: tCONST CONST_DECLARATION_LIST . tEND

    tEND  shift, and go to state 40


State 25

   13 CONST_DECLARATION_LIST: CONST_DECLARATION .
   14                       | CONST_DECLARATION . tCOMA CONST_DECLARATION_LIST

    tCOMA  shift, and go to state 41

    $default  reduce using rule 13 (CONST_DECLARATION_LIST)


State 26

    1 PROGRAMME: tVOID tMAIN tOPEN_PAR ARG_LIST tCLOSE_PAR tOPEN_BRACE BODY tCLOSE_BRACE .

    $default  reduce using rule 1 (PROGRAMME)


State 27

   24 PRINT: tPRINTF . tOPEN_PAR EXPRESSION tCLOSE_PAR

    tOPEN_PAR  shift, and go to state 42


State 28

   25 RETURN: tRETURN . EXPRESSION

    tVAR_NAME  shift, and go to state 43
    tINT_VAL   shift, and go to state 44
    tOPEN_PAR  shift, and go to state 45

    EXPRESSION  go to state 46


State 29

   23 AFFECT: tVAR_NAME . tAFFECT EXPRESSION

    tAFFECT  shift, and go to state 47


State 30

    4 BODY: DECLARATION_BLOCK INSTRUCTION_BLOCK .

    $default  reduce using rule 4 (BODY)


State 31

   19 INSTRUCTION_BLOCK: INSTRUCTION_LINE . INSTRUCTION_BLOCK

    tPRINTF    shift, and go to state 27
    tRETURN    shift, and go to state 28
    tVAR_NAME  shift, and go to state 29

    $default  reduce using rule 18 (INSTRUCTION_BLOCK)

    INSTRUCTION_BLOCK  go to state 48
    INSTRUCTION_LINE   go to state 31
    AFFECT             go to state 32
    PRINT              go to state 33
    RETURN             go to state 34


State 32

   20 INSTRUCTION_LINE: AFFECT . tEND

    tEND  shift, and go to state 49


State 33

   21 INSTRUCTION_LINE: PRINT . tEND

    tEND  shift, and go to state 50


State 34

   22 INSTRUCTION_LINE: RETURN . tEND

    tEND  shift, and go to state 51


State 35

    6 DECLARATION_BLOCK: DECLARATION_LINE DECLARATION_BLOCK .

    $default  reduce using rule 6 (DECLARATION_BLOCK)


State 36

   16 VAR_DECLARATION: tVAR_NAME tAFFECT . tINT_VAL

    tINT_VAL  shift, and go to state 52


State 37

    9 VAR_DECLARATION_LINE: tINT VAR_DECLARATION_LIST tEND .

    $default  reduce using rule 9 (VAR_DECLARATION_LINE)


State 38

   12 VAR_DECLARATION_LIST: VAR_DECLARATION tCOMA . VAR_DECLARATION_LIST

    tVAR_NAME  shift, and go to state 20

    VAR_DECLARATION_LIST  go to state 53
    VAR_DECLARATION       go to state 22


State 39

   17 CONST_DECLARATION: tVAR_NAME tAFFECT . tINT_VAL

    tINT_VAL  shift, and go to state 54


State 40

   10 CONST_DECLARATION_LINE: tCONST CONST_DECLARATION_LIST tEND .

    $default  reduce using rule 10 (CONST_DECLARATION_LINE)


State 41

   14 CONST_DECLARATION_LIST: CONST_DECLARATION tCOMA . CONST_DECLARATION_LIST

    tVAR_NAME  shift, and go to state 23

    CONST_DECLARATION_LIST  go to state 55
    CONST_DECLARATION       go to state 25


State 42

   24 PRINT: tPRINTF tOPEN_PAR . EXPRESSION tCLOSE_PAR

    tVAR_NAME  shift, and go to state 43
    tINT_VAL   shift, and go to state 44
    tOPEN_PAR  shift, and go to state 45

    EXPRESSION  go to state 56


State 43

   27 EXPRESSION: tVAR_NAME .

    $default  reduce using rule 27 (EXPRESSION)


State 44

   26 EXPRESSION: tINT_VAL .

    $default  reduce using rule 26 (EXPRESSION)


State 45

   28 EXPRESSION: tOPEN_PAR . EXPRESSION tMUL EXPRESSION tCLOSE_PAR
   29           | tOPEN_PAR . EXPRESSION tSLASH EXPRESSION tCLOSE_PAR
   30           | tOPEN_PAR . EXPRESSION tPLUS EXPRESSION tCLOSE_PAR
   31           | tOPEN_PAR . EXPRESSION tMINUS EXPRESSION tCLOSE_PAR

    tVAR_NAME  shift, and go to state 43
    tINT_VAL   shift, and go to state 44
    tOPEN_PAR  shift, and go to state 45

    EXPRESSION  go to state 57


State 46

   25 RETURN: tRETURN EXPRESSION .

    $default  reduce using rule 25 (RETURN)


State 47

   23 AFFECT: tVAR_NAME tAFFECT . EXPRESSION

    tVAR_NAME  shift, and go to state 43
    tINT_VAL   shift, and go to state 44
    tOPEN_PAR  shift, and go to state 45

    EXPRESSION  go to state 58


State 48

   19 INSTRUCTION_BLOCK: INSTRUCTION_LINE INSTRUCTION_BLOCK .

    $default  reduce using rule 19 (INSTRUCTION_BLOCK)


State 49

   20 INSTRUCTION_LINE: AFFECT tEND .

    $default  reduce using rule 20 (INSTRUCTION_LINE)


State 50

   21 INSTRUCTION_LINE: PRINT tEND .

    $default  reduce using rule 21 (INSTRUCTION_LINE)


State 51

   22 INSTRUCTION_LINE: RETURN tEND .

    $default  reduce using rule 22 (INSTRUCTION_LINE)


State 52

   16 VAR_DECLARATION: tVAR_NAME tAFFECT tINT_VAL .

    $default  reduce using rule 16 (VAR_DECLARATION)


State 53

   12 VAR_DECLARATION_LIST: VAR_DECLARATION tCOMA VAR_DECLARATION_LIST .

    $default  reduce using rule 12 (VAR_DECLARATION_LIST)


State 54

   17 CONST_DECLARATION: tVAR_NAME tAFFECT tINT_VAL .

    $default  reduce using rule 17 (CONST_DECLARATION)


State 55

   14 CONST_DECLARATION_LIST: CONST_DECLARATION tCOMA CONST_DECLARATION_LIST .

    $default  reduce using rule 14 (CONST_DECLARATION_LIST)


State 56

   24 PRINT: tPRINTF tOPEN_PAR EXPRESSION . tCLOSE_PAR

    tCLOSE_PAR  shift, and go to state 59


State 57

   28 EXPRESSION: tOPEN_PAR EXPRESSION . tMUL EXPRESSION tCLOSE_PAR
   29           | tOPEN_PAR EXPRESSION . tSLASH EXPRESSION tCLOSE_PAR
   30           | tOPEN_PAR EXPRESSION . tPLUS EXPRESSION tCLOSE_PAR
   31           | tOPEN_PAR EXPRESSION . tMINUS EXPRESSION tCLOSE_PAR

    tPLUS   shift, and go to state 60
    tMINUS  shift, and go to state 61
    tMUL    shift, and go to state 62
    tSLASH  shift, and go to state 63


State 58

   23 AFFECT: tVAR_NAME tAFFECT EXPRESSION .

    $default  reduce using rule 23 (AFFECT)


State 59

   24 PRINT: tPRINTF tOPEN_PAR EXPRESSION tCLOSE_PAR .

    $default  reduce using rule 24 (PRINT)


State 60

   30 EXPRESSION: tOPEN_PAR EXPRESSION tPLUS . EXPRESSION tCLOSE_PAR

    tVAR_NAME  shift, and go to state 43
    tINT_VAL   shift, and go to state 44
    tOPEN_PAR  shift, and go to state 45

    EXPRESSION  go to state 64


State 61

   31 EXPRESSION: tOPEN_PAR EXPRESSION tMINUS . EXPRESSION tCLOSE_PAR

    tVAR_NAME  shift, and go to state 43
    tINT_VAL   shift, and go to state 44
    tOPEN_PAR  shift, and go to state 45

    EXPRESSION  go to state 65


State 62

   28 EXPRESSION: tOPEN_PAR EXPRESSION tMUL . EXPRESSION tCLOSE_PAR

    tVAR_NAME  shift, and go to state 43
    tINT_VAL   shift, and go to state 44
    tOPEN_PAR  shift, and go to state 45

    EXPRESSION  go to state 66


State 63

   29 EXPRESSION: tOPEN_PAR EXPRESSION tSLASH . EXPRESSION tCLOSE_PAR

    tVAR_NAME  shift, and go to state 43
    tINT_VAL   shift, and go to state 44
    tOPEN_PAR  shift, and go to state 45

    EXPRESSION  go to state 67


State 64

   30 EXPRESSION: tOPEN_PAR EXPRESSION tPLUS EXPRESSION . tCLOSE_PAR

    tCLOSE_PAR  shift, and go to state 68


State 65

   31 EXPRESSION: tOPEN_PAR EXPRESSION tMINUS EXPRESSION . tCLOSE_PAR

    tCLOSE_PAR  shift, and go to state 69


State 66

   28 EXPRESSION: tOPEN_PAR EXPRESSION tMUL EXPRESSION . tCLOSE_PAR

    tCLOSE_PAR  shift, and go to state 70


State 67

   29 EXPRESSION: tOPEN_PAR EXPRESSION tSLASH EXPRESSION . tCLOSE_PAR

    tCLOSE_PAR  shift, and go to state 71


State 68

   30 EXPRESSION: tOPEN_PAR EXPRESSION tPLUS EXPRESSION tCLOSE_PAR .

    $default  reduce using rule 30 (EXPRESSION)


State 69

   31 EXPRESSION: tOPEN_PAR EXPRESSION tMINUS EXPRESSION tCLOSE_PAR .

    $default  reduce using rule 31 (EXPRESSION)


State 70

   28 EXPRESSION: tOPEN_PAR EXPRESSION tMUL EXPRESSION tCLOSE_PAR .

    $default  reduce using rule 28 (EXPRESSION)


State 71

   29 EXPRESSION: tOPEN_PAR EXPRESSION tSLASH EXPRESSION tCLOSE_PAR .

    $default  reduce using rule 29 (EXPRESSION)
